feat: Add Web UI, API Server, and Library

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "git-cms",
   "version": "1.0.0",
   "description": "A serverless, database-free CMS built on Git plumbing.",
+  "type": "module",
   "bin": {
     "git-cms": "./bin/git-cms.js"
   },
