chore: Switch license to Apache 2.0

--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "test:local": "vitest run"
   },
   "author": "James Ross <james@flyingrobots.dev>",
-  "license": "MIT",
+  "license": "Apache-2.0",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/flyingrobots/git-cms.git"
