--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,8 +29,9 @@ jobs:
           node-version: '20'
           cache: 'npm'
       
+      # Git is required in the container to perform plumbing operations during E2E tests
       - name: Install Git
-        run: apt-get update && apt-get install -y git
+        run: apt-get update && apt-get install -y --no-install-recommends git && rm -rf /var/lib/apt/lists/*
       
       - name: Configure Git User
         run: |
@@ -43,8 +44,6 @@ jobs:
         
       - name: Run Playwright Tests
         run: npm run test:e2e
-        env:
-          CI: true
 
       - uses: actions/upload-artifact@v4
         if: always()
