--- a/package.json
+++ b/package.json
@@ -19,6 +19,13 @@
     "type": "git",
     "url": "git+https://github.com/flyingrobots/git-cms.git"
   },
+  "dependencies": {
+    "@git-stunts/cas": "file:../git-stunts/cas",
+    "@git-stunts/empty-graph": "file:../git-stunts/empty-graph",
+    "@git-stunts/plumbing": "file:../git-stunts/plumbing",
+    "@git-stunts/trailer-codec": "file:../git-stunts/trailer-codec",
+    "@git-stunts/vault": "file:../git-stunts/vault"
+  },
   "devDependencies": {
     "@playwright/test": "^1.57.0",
     "vitest": "^4.0.16"
