feat(dx): overhaul onboarding with automation scripts, docs, and tests
Significantly improves the "getting started" experience by adding automated
setup scripts, comprehensive documentation, and a dedicated test suite for
the setup process.

Key changes:
- Scripts: Added `setup.sh`, `quickstart.sh`, and `demo.sh` to automate
  environment bootstrapping and demonstration.
- Docs: Added `ADR.md` (Architecture Decision Record), `TESTING_GUIDE.md`,
  `GETTING_STARTED.md`, and `QUICK_REFERENCE.md`.
- CI: Added GitHub Actions workflow (`test-setup.yml`) and BATS test suite
  (`test/setup.bats`) to verify the setup scripts.
- Docker: Updated `docker-compose.yml` and `Dockerfile` to use the parent
  directory build context, allowing access to the `@git-stunts` sibling dependency.
- Config: Added Obsidian vault configuration files.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,17 @@
+# IMPORTANT: Run docker compose from THIS directory (git-cms/)
+# The build context is set to parent (..) so Docker can access both
+# git-cms/ and git-stunts/ directories for the build.
+#
+# Expected structure:
+#   ~/git/
+#     git-cms/       ← Run docker compose here
+#     git-stunts/    ← Lego blocks (required)
+
 services:
   app:
     build:
-      context: .
+      context: ..  # Parent dir so we can access both git-cms and git-stunts
+      dockerfile: git-cms/Dockerfile
       target: dev
     volumes:
       - .:/app
@@ -15,7 +25,8 @@ services:
 
   test:
     build:
-      context: .
+      context: ..  # Parent dir so we can access both git-cms and git-stunts
+      dockerfile: git-cms/Dockerfile
       target: test
     volumes:
       - .:/app
