--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,17 +1,11 @@
-# IMPORTANT: Run docker compose from THIS directory (git-cms/)
-# The build context is set to parent (..) so Docker can access both
-# git-cms/ and git-stunts/ directories for the build.
-#
-# Expected structure:
-#   ~/git/
-#     git-cms/       ← Run docker compose here
-#     git-stunts/    ← Lego blocks (required)
+# IMPORTANT: Run docker compose from THIS directory (git-cms/).
+# Build context is this repository only; no sibling repos required.
 
 services:
   app:
     build:
-      context: ..  # Parent dir so we can access both git-cms and git-stunts
-      dockerfile: git-cms/Dockerfile
+      context: .
+      dockerfile: Dockerfile
       target: dev
     volumes:
       - .:/app
@@ -21,16 +15,24 @@ services:
     environment:
       - PORT=4638
       - GIT_CMS_ENV=dev
+      - GIT_AUTHOR_NAME=Git CMS Dev
+      - GIT_AUTHOR_EMAIL=dev@git-cms.local
+      - GIT_COMMITTER_NAME=Git CMS Dev
+      - GIT_COMMITTER_EMAIL=dev@git-cms.local
     command: npm run serve
 
   test:
     build:
-      context: ..  # Parent dir so we can access both git-cms and git-stunts
-      dockerfile: git-cms/Dockerfile
+      context: .
+      dockerfile: Dockerfile
       target: test
     volumes:
       - .:/app
       - /app/node_modules
     environment:
       - CI=true
+      - GIT_AUTHOR_NAME=Git CMS Bot
+      - GIT_AUTHOR_EMAIL=bot@git-cms.local
+      - GIT_COMMITTER_NAME=Git CMS Bot
+      - GIT_COMMITTER_EMAIL=bot@git-cms.local
     command: npm run test:local
