--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "demo": "./scripts/demo.sh",
     "quickstart": "./scripts/quickstart.sh",
     "setup": "./scripts/setup.sh",
+    "check:deps": "node scripts/check-dependency-integrity.mjs",
     "test": "./test/run-docker.sh",
     "test:setup": "./test/run-setup-tests.sh",
     "test:local": "vitest run",
@@ -24,13 +25,13 @@
     "url": "git+https://github.com/flyingrobots/git-cms.git"
   },
   "dependencies": {
-    "@git-stunts/alfred": "^0.10.0",
-    "@git-stunts/cas": "file:../git-stunts/cas",
+    "@git-stunts/alfred": "^0.10.3",
     "@git-stunts/docker-guard": "^0.1.0",
-    "@git-stunts/empty-graph": "file:../git-stunts/empty-graph",
-    "@git-stunts/plumbing": "file:../git-stunts/plumbing",
-    "@git-stunts/trailer-codec": "file:../git-stunts/trailer-codec",
-    "@git-stunts/vault": "file:../git-stunts/vault"
+    "@git-stunts/git-cas": "^3.0.0",
+    "@git-stunts/git-warp": "^10.4.2",
+    "@git-stunts/plumbing": "^2.8.0",
+    "@git-stunts/trailer-codec": "^2.1.1",
+    "@git-stunts/vault": "^1.0.0"
   },
   "devDependencies": {
     "@playwright/test": "^1.57.0",
